test/type/fail/negative_unary_wrong.j
class A{
  Void main() {
    return -null;
  }
}
